--- a/ch2_nn_math/tex/sources.bib
+++ b/ch2_nn_math/tex/sources.bib
@@ -71,3 +71,19 @@
   organization = {MathWorld--A Wofram Web Resource},
   url          = {https://mathworld.wolfram.com/Parameter.html}
 }
+
+@misc{MathLibreGradient2021,
+  year      = {2021},
+  publisher = {Lake Tahoe Community College},
+  title     = {The Gradient},
+  url       = {https://math.libretexts.org/Bookshelves/Calculus/Supplemental_Modules_(Calculus)/Vector_Calculus/1%3A_Vector_Basics/2%3A_The_Gradient}
+}
+
+@misc{Kingma2014,
+  title         = {Auto-Encoding Variational Bayes},
+  author        = {Diederik P Kingma and Max Welling},
+  year          = {2014},
+  eprint        = {1312.6114},
+  archiveprefix = {arXiv},
+  primaryclass  = {stat.ML}
+}
