--- a/ch2_nn_math/tex/sources.bib
+++ b/ch2_nn_math/tex/sources.bib
@@ -87,3 +87,21 @@
   archiveprefix = {arXiv},
   primaryclass  = {stat.ML}
 }
+
+@misc{NumPyBroadcasting2021,
+  author       = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
+                  van der Walt and Ralf Gommers and Pauli Virtanen and David
+                  Cournapeau and Eric Wieser and Julian Taylor and Sebastian
+                  Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
+                  and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
+                  Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
+                  R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
+                  G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
+                  Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
+                  Travis E. Oliphant},
+  title        = {Broadcasting},
+  url          = {https://numpy.org/doc/stable/user/basics.broadcasting.html},
+  howpublished = {Broadcasting - NumPy v1.22 Manual},
+  publisher    = {NumPy},
+  year         = {2021}
+}
