forward pass transpose ctd

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -19,22 +19,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 32)\n"
+      "(1, 32)\n",
+      "(1, 32)\n",
+      "(32,)\n"
      ]
     }
    ],
    "source": [
     "a = np.random.normal(size=(32, 1))\n",
     "b = np.random.normal(size=(32, 1))\n",
+    "c = np.random.normal(size=(32,))\n",
     "\n",
-    "print(np.transpose(a).shape)"
+    "print(np.atleast_2d(c).shape)\n",
+    "\n",
+    "print(np.transpose(a).shape)\n",
+    "print(np.transpose(c).shape)"
    ]
   },
   {
